style.css
@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800);
@import "bootstrap";
@charset "utf-8";
@-webkit-viewport   { width: device-width; }
@-moz-viewport      { width: device-width; }
@-ms-viewport       { width: device-width; }
@-o-viewport        { width: device-width; }
@viewport           { width: device-width; }

body{
  font-family: 'Open Sans', Arial, Tahoma;
  font-weight: 400;
  color: #363636;
  background: #ffffff;
}
blockquote {
  font-size: 1em;
}
.container{
  background: #fff;
}


.float{
	width:40px;
	height:40px;
	background-color:#227c74;
	color:#FFF;
	border-radius:30px;
  margin-top: 10px;
  margin-right: 10px;
}

.my-float{
	margin-top: 11px;
  margin-left: 2px;
}

.about-text{
  border-top-left-radius: inherit;
  border-top-right-radius: inherit;
  border-bottom-right-radius: inherit;
  border-bottom-left-radius: inherit;
  margin-left: 4.3vw;
  
  padding: .5rem 1rem;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid rgba(0,0,0,.125);
}



#text-header h1{
  margin: 0;
  padding: 0;
  font-size: 1.5em;
  font-weight: 700;
  text-transform: uppercase;
  text-align: center;
  letter-spacing: -1px;
}

#text-header h1::first-line{
  font-size: 1.5em;
  font-weight: 800;
  line-height: 1.5em;
}

#text-header h1 span{
  color: #334960;
  opacity: 0.7;
}
#text-header h1 sup{
  opacity: 0.5;
}

#headrow:after{
  width: 100%;
  height: 3px;
  border-bottom: 1px solid #ddd;
  margin-top: 15px;
  margin-bottom: 15px;
  content: '';
  display: block;
}

.card{
  margin-bottom: 5px;
  border: none;
  break-inside: avoid;
  word-wrap: unset;
  min-width: fit-content;
  display: block;
}
.card h2{
  color: #227c74;
  font-size: 1.25em;
  font-weight: 700;
  text-transform: uppercase;
}

.card-body{
  padding: 0rem;
}

.card-group{
  padding-left: 1.5rem;
}

.card-columns{
  column-count: 1;
}

.card .list-group{
  padding: .5rem 1rem;
  padding-right: 0rem;
}


.logo-container{
  min-width: 270px;
  min-height: 85px;
}

#awards,
#education{
  /* margin-top: 20px; */
  margin-bottom: 0;
  position: relative;
  /* padding: 1em 0; */
  list-style: none;
}

#awards li,
#education li{
  width: 100%;
  z-index: 2;
  position: relative;
  float: left;

}

#awards .year,
#education .year{
  width: 14%;
  background: #fff;
  padding: 10px;
  font-weight: 700;
  display: inline-block;
  text-align: left;
  position: relative;
  left: 5px;

}
#awards .description,
#education .description{
  width: 83%;
  display: inline-block;
  background: #eee;
  margin-bottom: 5px;
  position: relative;
  padding: 10px;
  border-bottom: 1px solid #ccc;
  border-right: 1px solid #ccc;
}

#awards .description h3,
#education .description h3{
  font-size: 1.2em;
  margin: 0;
  padding: 0;
  font-weight: 700;
}
#awards .description p,
#education .description p{
  margin-top: 5px;
  padding: 0;
  margin-bottom: 0px;
}

.job{
  margin-bottom: 15px;
}
.job .details {
  margin-left: 3%;
  width: 95%;
  padding: 10px;
  margin-bottom: 10px;
  background: #eee;
  border-bottom: 1px solid #ccc;
  border-right: 1px solid #ccc;
}
.job .where{
  font-size: 1em;
  font-weight: bold;
}
.job .year{
  opacity: 0.7;
}
.job .profession{
  font-size: 1.2em;
  font-weight: bold;
}
.job .description{
  line-height: 1.5em;
}
.job .highlights{
  padding: 5px 0;
  font-weight: bold;
}
.job .job-details {
  padding-left: 4vw;
  width: 100%;
}
.publication {
  margin-bottom: 0;
}
.publication .name{
  font-size: 1em;
  font-weight: bold;
}
.publication .year{
    opacity: 0.7;
}
.publication p{
  margin: 0;
  padding-top: 10px;
}

.contact-item{
  /* width: 100%; */
  float: left;
  max-width: fit-content;
}
.contact-item .icon{
  padding: 2px;
  border-right: 1px solid #ccc;
  border-bottom: 1px solid #ccc;
  color: #32475c;
  background: #eee;
}
.contact-item .title{
  width: 100%;
  font-weight: 700;
  opacity: 0.9;
}
.contact-item .title.only{
  margin-top: 2px;
}
.contact-item .description{
  width: 100%;
  color: #334960;
}

.item-interests,
.item-skills{
  height: 30px;
  color: #334960;
  padding: 5px 10px;
  margin-bottom: 5px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 1.1em;
  font-weight: 600;
}
.interest,
.skill{
  color: #fff;
  display: inline-block;
  margin-right: 5px;
  margin-bottom: 5px;
  padding: 5px 10px;
  background: #32475c;
  position: relative;
  font-size: .85em;
}
.skill-level {
  background-color: #227c74;
  border-radius: 4px;
  color: #fff;
  padding: 1px 8px;
  font-size: .75em;
  position: absolute;
  margin: 1px 10px;
}

#language-skills .skill{
  margin: 10px 0;
  padding-bottom: 10px;
  border-bottom: 1px solid #eee;
}

@media (prefers-color-scheme: dark) {
  body {
    background: #1a1e2e;
    color: #d4d8e8;
  }
  .container, .container-fluid {
    background: #1a1e2e;
  }
  /* Section headings */
  .card h2 {
    color: #4db6ac;
  }
  /* Job/education detail boxes */
  .job .details,
  #education .description,
  #awards .description {
    background: #252a3a;
    border-color: #3a4055;
  }
  #education .year {
    background: #1a1e2e;
  }
  /* About text box */
  .about-text {
    background-color: #252a3a;
    border-color: #3a4055;
  }
  /* Skill and interest tags */
  .skill {
    background: #2e4a6a;
  }
  /* Contact icon cells */
  .contact-item .icon {
    background: #252a3a;
    border-color: #3a4055;
    color: #7eb8d4;
  }
  .contact-item .description {
    color: #7eb8d4;
  }
  /* Dividers and list items */
  .list-group-item {
    background: transparent;
    border-color: #2e3348;
    color: #d4d8e8;
  }
  /* Header separator */
  #headrow:after {
    border-color: #2e3348;
  }
  /* Muted text */
  .job .year {
    opacity: 0.6;
  }
  /* Links */
  a {
    color: #7eb8d4;
  }
  a:hover {
    color: #a8d8ea;
  }
}

